src/objects/PersonTest__c.object
<CustomObject>
    <fields>
        <fullName>pAddress__c</fullName>
        <label>pAddress</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pIdNumber__c</fullName>
        <label>pIdNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pName__c</fullName>
        <label>pName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>PersonTest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PersonTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PersonsTest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>